<resources>
    <!-- Reusable -->
    <string name="copyright_text">©2021 Vikendu Singh, Jodhpur</string>
    <string name="app_label">TheServicesApp</string>
    <string name="search_hint">Search Listings</string>

    <!-- ad_card_format.xml -->
    <string name="ad_tagline">Loading Tagline…</string>
    <string name="ad_description">Loading Desc…</string>
    <string name="ad_price">Loading Price…</string>
    <string name="star_image">Image of a star</string>
    <string name="providers_rating">Loading rating…</string>
    <string name="app_name">The Services App</string>

    <!-- activity_ad_creation_tool.xml -->
    <string name="ad_creation_tagline_input">Enter a Tagline</string>
    <string name="ad_creation_price_input">Enter your price</string>
    <string name="ad_creation_desc_input">Enter your Ad description</string>
    <string name="ad_creation_preview_button">Preview</string>
    <string name="ad_creation_submit_button">Submit</string>
    <string name="ad_creation_negative">Okay</string>

    <!-- activity_providers_home.xml -->
    <string name="ad_creation_floating">Ad creation button</string>
    <string name="submitted_ads">All the submitted ads</string>
    <string name="awaiting_approval">All the ads that have not been approved</string>
    <string name="ad_creating_tool_btn">Ad creation tool from here</string>

    <!-- activity_login.xml AND activity_register.xml -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_google">Sign Up With Google</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- layout_location.xml -->
    <string name="feed_location">Loading Location…</string>
    <string name="refresh">Refresh&#10; Location</string>
    <string name="feed_description">Go to feed</string>

    <!-- activity_buyers_home.xml -->
    <string name="feed_button">Feed</string>
    <string name="chat_button">Chat</string>

    <!-- layout_chat_msg_row.xml -->
    <string name="prompt_msg"></string>
    <string name="sample_message">Hello!</string>

    <!-- activity_chat.xml -->
    <string name="action_send">Send</string>

    <!-- layout_contact_id.xml -->
    <string name="contact_name">Loading Name…</string>
    <string name="contact_id">Loading id…</string>

    <!-- layout_chat_header.xml -->
    <string name="chat_header_text">Recent Contacts</string>

    <!-- activity_provider_details.xml -->
    <string name="details_name">Name :</string>
    <string name="details_phone_number">Phone Number :</string>
    <string name="details_email">Email :</string>
    <string name="details_about_me">About Me :</string>
    <string name="details_default">Null</string>
    <string name="details_chat_button">Start Chat</string>
    <string name="details_go_back_to_feed">Go Back</string>
    <string name="title_activity_buyers_landing">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_providers_home">MainActivity</string>
</resources>