<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/idAdCategoryImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/sample_ad_icon_background" />

        <TextView
            android:id="@+id/idAdTagLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@id/idAdCategoryImage"
            android:text="@string/ad_tagline"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idAdDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idAdTagLine"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/idAdCategoryImage"
            android:drawablePadding="2dp"
            android:text="@string/ad_description" />

        <TextView
            android:id="@+id/idAdPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idAdDesc"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/idAdCategoryImage"
            android:drawablePadding="2dp"
            android:text="@string/ad_price" />

        <ImageView
            android:id="@+id/idStarRatingImage"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/outline_star_black_48"
            android:layout_below="@id/idAdPrice"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/star_image"
            android:layout_toEndOf="@id/idAdCategoryImage"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/idProviderRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idAdPrice"
            android:layout_marginTop="4dp"
            android:text="@string/providers_rating"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/idStarRatingImage"
            android:layout_marginStart="5dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
