<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_welcome_min"

    tools:context=".activities.RegisterActivity"
    android:gravity="top">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white" >

        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white" >

        <AutoCompleteTextView
            android:id="@+id/idFirstName"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/prompt_firstname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white" >

        <AutoCompleteTextView
            android:id="@+id/idLastName"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/prompt_lastname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white" >

        <EditText
            android:id="@+id/register_password"
            android:background="@android:color/transparent"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:layout_height="70dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white" >

        <EditText
            android:id="@+id/register_confirm_password"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/prompt_password_again"
            android:imeActionId="@integer/register_form_finished"
            android:imeActionLabel="@string/action_sign_up"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_sign_up_button"
        style="?android:textAppearanceMedium"
        android:background="@color/white"
        android:textColor="@color/white"
        android:onClick="signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_up"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/register_using_google"
        style="?android:textAppearanceMedium"
        android:background="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_up_google"
        android:textStyle="bold"/>

</LinearLayout>