<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProvidersHomeActivity">

    <ImageView
        android:id="@+id/idAdCreationToolBtn"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="188dp"
        android:contentDescription="@string/ad_creating_tool_btn"
        android:onClick="goToAdCreationTool"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idPendingApprovalBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_add_24" />

    <ImageView
        android:id="@+id/idApprovedAdsBtn"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="188dp"
        android:contentDescription="@string/submitted_ads"
        android:onClick="goToApprovedAdsActivity"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/idPendingApprovalBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_done_24" />

    <ImageView
        android:id="@+id/idPendingApprovalBtn"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="188dp"
        android:contentDescription="@string/awaiting_approval"
        android:onClick="goToPendingAdsActivity"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/idAdCreationToolBtn"
        app:layout_constraintStart_toEndOf="@+id/idApprovedAdsBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_pending_actions_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:onClick="goToApprovedAdsActivity"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idApprovedAdsBtn"
        app:srcCompat="@drawable/approved_ads_text" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:onClick="goToAdCreationTool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/idAdCreationToolBtn"
        app:srcCompat="@drawable/create_ads_text" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:onClick="goToChatActivity"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/outline_question_answer_24" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:onClick="goToFeedActivity"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/outline_feed_24" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/outline_settings_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:onClick="goToChatActivity"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/messages_text" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:onClick="goToFeedActivity"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/local_feed_text" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/settings_text" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:onClick="goToPendingAdsActivity"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/idPendingApprovalBtn"
        app:srcCompat="@drawable/pending_ads_text" />

</androidx.constraintlayout.widget.ConstraintLayout>